# archmint-contracts

contracts/: store_contracts.sh
contracts/cw20-base-burnable/: Cargo.toml  README.md
contracts/cw20-base-burnable/src/: allowances.rs  contract.rs  msg.rs  state.rs
contracts/cw20-base-common/: Cargo.toml
contracts/cw20-base-common/src/: contract.rs
contracts/cw20-base-hello/: Cargo.toml  README.md
contracts/cw20-base-hello/src/: contract.rs  enumerable.rs  error.rs  msg.rs
contracts/cw20-base-mintable/: Cargo.toml  README.md
contracts/cw20-base-mintable/src/: contract.rs  msg.rs
contracts/cw20-base-simple/: Cargo.toml  README.md
contracts/cw20-base-simple/src/: contract.rs  lib.rs  msg.rs  query.rs  state.rs
contracts/cw20-base-standard/: Cargo.toml
contracts/cw20-base-standard/src/: allowances.rs  contract.rs  error.rs  msg.rs
contracts/cw20-base-unlimited/: Cargo.toml  NOTICE  README.md
contracts/cw20-base-unlimited/src/: contract.rs  error.rs
